# TRAG

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SUMMARY.md  requirements.txt
backend/: README.md  pyproject.toml
backend/notebooks/: demo_build_db.ipynb  feature0a_baseline_rag.ipynb  feature0b_ingestion.ipynb  feature1_dataset_creation.ipynb  feature1_evaluation.ipynb  feature1_multi_modal_rag.ipynb  feature1a_evaluation.ipynb  feature1b_dataset_creation.ipynb  feature2a_structured_outputs.ipynb  feature3_advanced_retrieval.ipynb  feature3a_advanced_retrieval.ipynb  feature3b_conversation.ipynb  feature3c_query_techniques.ipynb  feature3d_context_enrichment.ipynb  feature4a_tools.ipynb  feature4b_llm_agents.ipynb  feature4c_rag_tool.ipynb  feature4d_rag_agent.ipynb  feature4e_rag_subagent.ipynb
backend/src/sme_kt_zh_collaboration_rag/: feature0_baseline_rag.py  feature0_ingestion.py  feature3_advanced_retrieval.py  feature4_tool_agents.py  main.py
backend/src/sme_kt_zh_collaboration_rag/utils/: json.py
conversational-toolkit/: README.md  pyproject.toml
conversational-toolkit/src/conversational_toolkit/agents/: base.py  rag.py  router.py  tool_agent.py
conversational-toolkit/src/conversational_toolkit/api/: server.py
conversational-toolkit/src/conversational_toolkit/chunking/: base.py  markdown_chunker.py  pdf_chunker.py
conversational-toolkit/src/conversational_toolkit/conversation_database/: controller.py
conversational-toolkit/src/conversational_toolkit/embeddings/: clip.py  qwen_vl.py
conversational-toolkit/src/conversational_toolkit/evaluation/: evaluator.py
conversational-toolkit/src/conversational_toolkit/evaluation/adapters/: ragas_adapter.py
conversational-toolkit/src/conversational_toolkit/llms/: base.py  local_llm.py  ollama.py  openai.py
conversational-toolkit/src/conversational_toolkit/retriever/: bm25_retriever.py  reranking_retriever.py  vectorstore_retriever.py
conversational-toolkit/src/conversational_toolkit/utils/: retriever.py
conversational-toolkit/src/conversational_toolkit/vectorstores/: base.py  chromadb.py
frontend/: .env  README.md  next.config.mjs
frontend/src/components/sections/: rag-config-panel.tsx
frontend/src/components/sections/sidebar/: history.tsx  settings.tsx
frontend/src/components/ui/: source-item.tsx
frontend/src/hooks/: useMessaging.tsx
frontend/src/lib/lang/: de.ts  en.ts  fr.ts  it.ts
